--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: naver_maps_js2dart
+name: naver_map_js2dart
 version: 0.0.1
 description: >
   With that package you will be able to use Google Maps JavaScript API from Dart
